# deepgarch

./: .gitignore  environment.yml  pyproject.toml  run.py  run_natgas.py
plots_ng/: conditional_parameter_path.csv
src/deepgarch/: __init__.py
src/deepgarch/data/: __init__.py  loader.py  natural_gas_loader.py
src/deepgarch/data/downloaded/: CL_F_aux_crude_2005-01-01_2026-06-29.parquet  HO_F_aux_heating_oil_2005-01-01_2026-06-29.parquet  NG_F_ohlcv_2005-01-01_2026-06-29.parquet  RB_F_aux_gasoline_2005-01-01_2026-06-29.parquet  SPY_2021-06-11_2026-06-10.parquet  SPY_2021-06-23_2026-06-22.parquet
src/deepgarch/eval/: __init__.py  baselines.py  metrics.py  plots.py
src/deepgarch/features/: __init__.py  natural_gas_features.py  pipeline.py
src/deepgarch/models/: __init__.py  garchnet.py
src/deepgarch/models/nn/: __init__.py  paramnet.py
src/deepgarch/models/vol/: __init__.py  base.py  garch.py  garch_family.py
src/deepgarch/train/: __init__.py  config.py  trainer.py
