[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgarch"
version = "0.1.0"
description = "Neural network-parameterized GARCH volatility models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "arch>=6.0",       # baseline static GARCH for comparison
    "yfinance>=0.2",   # data fetching
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]